public class Main {
    public static void main(String[] args){

        StreamingService stream = new StreamingService();
        stream.startMenu();
    }
}