import java.util.ArrayList;

public interface Media {
     public void play();
     public ArrayList<String> getGenre();
     public String getTitel();
     public String getReleaseYear();
     public float getRating();
}
